Fix back-to-top button position and visibility.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@
     --dandy-black: #1B1212;
     --dandy-black-faded: #1b121299;
     --dandy-gold: #FFD700;
+    --dandy-gold-faded: #ffd70099;
     --main-font: "Bodoni Moda", sans-serif;
     --alt-font: "EB Garamond", serif;
 }
@@ -135,3 +136,12 @@ a {
 
 /* PRODUCTS LIST */
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
+    background-color: var(--dandy-gold-faded);
+}
